--- a/pricing.html
+++ b/pricing.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Figtree&amp;display=swap">
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span><img src="assets/img/logo.png"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-xxl"><a class="navbar-brand d-flex align-items-center" href="/"><span><img src="assets/img/logo.png"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="index.html">Home</a></li>
@@ -23,7 +24,7 @@
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="pricing.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="contacts.html">FAQ</a></li>
                     <li class="nav-item"></li>
-                </ul><a class="fw-bold link-secondary" href="contacts.html">Register</a><a class="btn btn-primary border rounded-pill shadow" role="button" href="signup.html" style="margin:0px 10px;">Log in</a>
+                </ul><a class="fw-bold link-secondary" href="contacts.html">Register</a><a class="btn btn-primary border rounded-pill shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px;">Log in</a>
             </div>
         </div>
     </nav>
