--- a/index.html
+++ b/index.html
@@ -42,10 +42,34 @@
             </div>
             <div class="d-flex align-items-xxl-center" style="margin-left: 10px;"><input type="email" style="border-width: 0px;background: #EBEBEB;width: 350px;height: 45px;border-radius: 10px;color: #CFCFCF;padding: 3px 10px;--bs-body-font-weight: 600;font-weight: bold;" name="email" placeholder="Your Email"><a class="btn btn-primary border  shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px; border-radius:15px;border:0">Subscribe</a></div>
         </div>
-        <div class="d-flex d-xxl-flex" style="width: 70%;margin: auto;margin-right: auto;margin-bottom: auto;margin-left: auto;margin-top: 100px;"><img src="assets/img/Group%20111.png" style="width: 45%;height: auto;">
-            <div class="d-flex d-xxl-flex flex-column justify-content-xxl-center align-items-xxl-start" style="margin-left: 100px;">
+        <div class="d-flex d-xxl-flex justify-content-between" style="width: 70%;margin: auto;margin-right: auto;margin-bottom: auto;margin-left: auto;margin-top: 100px;"><img src="assets/img/Group%20111.png" style="width: 45%;height: auto;">
+            <div class="d-flex d-xxl-flex flex-column justify-content-center align-items-center align-content-center justify-content-xxl-center align-items-xxl-start" style="width: 50%;padding-left: 200px;">
                 <h1 class="fw-bold text-secondary" style="font-size: 48px;">Our Mission</h1>
                 <p class="fw-semibold text-secondary" style="line-height: 17.6px;color: #10367d;"><br>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Quisque <br>quis efficitur massa.<br><br></p><a class="btn btn-primary border  shadow buttonPressx" role="button" href="signup.html" style="margin:0px 0px; border-radius:15px;border:0;padding:15px 20px;">MORE ABOUT US</a>
+            </div>
+        </div>
+        <div class="d-flex d-xxl-flex justify-content-between" style="width: 70%;margin: auto;margin-right: auto;margin-bottom: auto;margin-left: auto;margin-top: 100px;">
+            <div class="d-flex d-xxl-flex flex-column justify-content-center align-items-center align-content-center justify-content-xxl-center align-items-xxl-start" style="width: 50%;">
+                <h1 class="fw-bold text-secondary" style="font-size: 48px;">Our Mission</h1>
+                <p class="fw-semibold text-secondary" style="line-height: 17.6px;color: #10367d;"><br>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Quisque <br>quis efficitur massa.<br><br></p><a class="btn btn-primary border  shadow buttonPressx" role="button" href="signup.html" style="margin:0px 0px; border-radius:15px;border:0;padding:15px 20px;">OUR PROJECTS</a>
+            </div><img src="assets/img/Group%20112.png" style="width: 45%;height: auto;">
+        </div>
+        <div class="text-start d-flex d-xxl-flex justify-content-between align-content-around" style="height: 250px;width: 70%;margin: 150px auto auto auto;background: #ffffff;border-radius: 25px;box-shadow: 5px 10px 20px 0px rgba(61,61,61,0.23);padding: 50px;">
+            <div class="d-flex flex-column" style="height: auto;">
+                <h1 class="fw-bolder text-secondary" style="font-size: 48px;border-color: FAC10E;color: #fac10e;font-weight: bold;">Our Stats</h1>
+                <p class="fw-semibold text-secondary" style="line-height: 17.6px;color: #10367d;margin-bottom: 0px;"><br>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.<br>&nbsp;Quisque quis efficitur massa.<br><br></p>
+            </div>
+            <div>
+                <p class="fw-bolder" style="font-size: 64px;font-weight: bold;color: #FAC10E;margin-bottom: 0px;">60<sub><span style="color: rgb(16, 54, 125);">%</span></sub></p>
+                <p class="fw-semibold text-secondary" style="line-height: 17.6px;color: #10367d;margin-bottom: 0px;"><br>Lorem ipsum dolor sit amet.<br><br></p>
+            </div>
+            <div>
+                <p class="fw-bolder" style="font-size: 64px;font-weight: bold;color: #FAC10E;margin-bottom: 0px;">85<sub><span style="color: rgb(16, 54, 125);">k</span></sub></p>
+                <p class="fw-semibold text-secondary" style="line-height: 17.6px;color: #10367d;margin-bottom: 0px;"><br>Lorem ipsum dolor sit amet.<br><br></p>
+            </div>
+            <div>
+                <p class="fw-bolder" style="font-size: 64px;font-weight: bold;color: #FAC10E;margin-bottom: 0px;">90<sub><span style="color: rgb(16, 54, 125);">+</span></sub></p>
+                <p class="fw-semibold text-secondary" style="line-height: 17.6px;color: #10367d;margin-bottom: 0px;"><br>Lorem ipsum dolor sit amet.<br><br></p>
             </div>
         </div>
     </header>
