--- a/index.html
+++ b/index.html
@@ -75,66 +75,77 @@
             </div>
         </div>
         <footer class="text-white bg-dark" style="margin-top: 100px;">
-            <div class="container-fluid py-4 py-lg-5" style="padding: 48px 50px;">
-                <div class="row gx-0 row-cols-5 justify-content-center">
+            <div class="container-xxl py-4 py-lg-5" style="padding: 48px 50px;">
+                <div class="row gx-3 row-cols-5 justify-content-center">
                     <div class="col-xxl-1"><img src="assets/img/logoBottom.png"></div>
                     <div class="col-sm-4 col-md-3 col-xxl-1 text-center text-lg-start d-flex flex-column item">
-                        <h3 class="fs-6 text-white" style="font-weight: bold;font-size: 20px;">Contacts</h3>
+                        <h3 class="text-white" style="font-weight: bold;font-size: 20px;font-family: Figtree, sans-serif;">Contacts</h3>
                         <ul class="list-unstyled">
-                            <li><a class="link-light" href="#">+370 60 000 000</a></li>
-                            <li><a class="link-light" href="#"><span style="color: RGBA(247, 248, 249, var(--bs-link-opacity, 1));">+370 60 000 000</span></a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">+370 60 000 000</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;"><span style="color: RGBA(247, 248, 249, var(--bs-link-opacity, 1));">+370 60 000 000</span></a></li>
                         </ul>
                     </div>
-                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item">
-                        <h3 class="fs-6 text-white" style="font-size: 20px;font-weight: bold;">Quick Links</h3>
-                        <ul class="list-unstyled">
-                            <li><a class="link-light" href="#">Home</a></li>
-                            <li><a class="link-light" href="#">Blog</a></li>
-                            <li><a class="link-light" href="#">About</a></li>
-                            <li><a class="link-light" href="#">Projects</a></li>
-                            <li><a class="link-light" href="#">FAQ</a></li>
+                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item" style="font-family: Figtree, sans-serif;">
+                        <h3 class="text-white" style="font-size: 20px;font-weight: bold;font-family: Figtree, sans-serif;">Quick Links</h3>
+                        <ul class="list-unstyled" style="font-family: Figtree, sans-serif;">
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Home</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Blog</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">About</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Projects</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">FAQ</a></li>
                         </ul>
                     </div>
-                    <div class="col-sm-4 col-md-3 col-xxl-1 text-center text-lg-start d-flex flex-column item">
-                        <h1 class="fs-6 text-white"><strong>My Account</strong></h1>
-                        <ul class="list-unstyled">
-                            <li><a class="link-light" href="#">My Statistics</a></li>
-                            <li><a class="link-light" href="#">My Wallet</a></li>
-                            <li></li>
+                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item" style="font-family: Figtree, sans-serif;">
+                        <h1 class="text-white" style="font-family: Figtree, sans-serif;font-size: 20px;"><strong>My Account</strong></h1>
+                        <ul class="list-unstyled" style="font-family: Figtree, sans-serif;">
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">My Statistics</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">My Wallet</a></li>
+                            <li style="font-family: Figtree, sans-serif;"></li>
                         </ul>
                     </div>
-                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item">
-                        <h1 class="fs-6 text-white"><strong>About Us</strong></h1>
-                        <ul class="list-unstyled">
-                            <li><a class="link-light" href="#">Who We Are</a></li>
-                            <li><a class="link-light" href="#">Our Team</a></li>
-                            <li><a class="link-light" href="#">Customer Support</a></li>
+                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item" style="font-family: Figtree, sans-serif;">
+                        <h1 class="text-white" style="font-family: Figtree, sans-serif;font-size: 20px;"><strong>About Us</strong></h1>
+                        <ul class="list-unstyled" style="font-family: Figtree, sans-serif;">
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Who We Are</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Our Team</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Customer Support</a></li>
                         </ul>
                     </div>
-                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item">
-                        <h1 class="fs-6 text-white"><strong>Privacy&nbsp;</strong></h1>
-                        <ul class="list-unstyled">
-                            <li><a class="link-light" href="#">Terms and Conditions</a></li>
-                            <li><a class="link-light" href="#">Cookie Settings</a></li>
-                            <li><a class="link-light" href="#">Privacy Policy</a></li>
+                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item" style="font-family: Figtree, sans-serif;">
+                        <h1 class="text-white" style="font-family: Figtree, sans-serif;font-size: 20px;"><strong>Privacy&nbsp;</strong></h1>
+                        <ul class="list-unstyled" style="font-family: Figtree, sans-serif;">
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Terms and Conditions</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Cookie Settings</a></li>
+                            <li style="font-family: Figtree, sans-serif;"><a class="link-light" href="#" style="font-family: Figtree, sans-serif;">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
-                <hr>
-                <div class="d-flex justify-content-between align-items-center pt-3">
-                    <p class="mb-0">Copyright © 2025 Brand</p>
-                    <ul class="list-inline mb-0">
-                        <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
-                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path>
-                            </svg></li>
-                        <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter">
-                                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15"></path>
-                            </svg></li>
-                        <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-instagram">
-                                <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"></path>
-                            </svg></li>
-                    </ul>
+                <div class="row g-0 row-cols-5 justify-content-center">
+                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item"></div>
+                    <div class="col-sm-4 col-md-3 col-xxl-2 text-center text-lg-start d-flex flex-column item" style="font-family: Figtree, sans-serif;">
+                        <h1 class="text-white" style="font-family: Figtree, sans-serif;font-size: 20px;"><strong>Follow Us</strong></h1>
+                        <ul class="list-unstyled" style="font-family: Figtree, sans-serif;"></ul>
+                        <ul class="list-inline mb-0" style="width: 300px;">
+                            <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook" style="width: 36px;height: 36px;">
+                                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"></path>
+                                </svg></li>
+                            <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-twitter-x" style="width: 36px;height: 36px;">
+                                    <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z"></path>
+                                </svg></li>
+                            <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-linkedin" style="width: 36px;height: 36px;">
+                                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401m-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4"></path>
+                                </svg></li>
+                            <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-instagram" style="width: 36px;height: 36px;">
+                                    <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"></path>
+                                </svg></li>
+                            <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-google" style="width: 36px;height: 36px;">
+                                    <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"></path>
+                                </svg></li>
+                        </ul>
+                    </div>
                 </div>
+                <hr style="height: 2px;background: #ffffff;opacity: 1;margin: 60px 0px;">
+                <p class="fw-semibold text-light" style="line-height: 17.6px;color: #10367d;margin-bottom: 0px;"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse consequat nisi quis vestibulum tempor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum purus ac sapien blandit tempor.<br><br></p>
             </div>
         </footer>
     </header>
