--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <footer class="text-white bg-dark" style="margin-top: 100px;">
-            <div class="container-xxl py-4 py-lg-5" style="padding: 48px 50px;">
+            <div class="container-fluid py-4 py-lg-5" style="padding: 48px 50px;">
                 <div class="row gx-3 row-cols-5 justify-content-center">
                     <div class="col-xxl-1"><img src="assets/img/logoBottom.png"></div>
                     <div class="col-sm-4 col-md-3 col-xxl-1 text-center text-lg-start d-flex flex-column item">
