--- a/pricing.html
+++ b/pricing.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Figtree&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
     <link rel="stylesheet" href="assets/css/Articles-Cards-images.css">
+    <link rel="stylesheet" href="assets/css/cards-d_style.css">
     <link rel="stylesheet" href="assets/css/Features-Cards-icons.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
@@ -19,14 +21,14 @@
         <div class="container-xxl"><a class="navbar-brand d-flex align-items-center" href="/"><span><img src="assets/img/logo.png"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="features.html"><strong>About</strong></a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="features.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="integrations.html">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="pricing.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="contacts.html">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="index.html" style="font-family: Figtree">Home</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="features.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="features.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="integrations.html" style="font-family: Figtree, sans-serif;">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="pricing.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="contacts.html" style="font-family: Figtree, sans-serif;">FAQ</a></li>
                     <li class="nav-item"></li>
-                </ul><a class="fw-bold link-secondary" href="contacts.html">Register</a><a class="btn btn-primary border rounded-pill shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px;">Log in</a>
+                </ul><a class="fw-bold link-secondary" href="contacts.html" style="font-family: Figtree, sans-serif;">Register</a><a class="btn btn-primary border rounded-pill shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px;font-family:Figtree">Log in</a>
             </div>
         </div>
     </nav>
