little fixes responsiveness

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="row">
                     <div class="col-xxl-6 autosync">
                         <h1 class="text-light" style="font-size: 48px;font-family: Figtree, sans-serif;font-weight: bold;">Discuss your<br>Investment <span style="color: rgb(250, 193, 14);">Opportunities</span></h1>
-                        <p style="text-align: left;font-size: 16px;font-family: Figtree, sans-serif;line-height: 22px;color: rgb(255,255,255);margin: 0px;margin-top: 48px;">Lorem ipsum dolor sit amet,<br>&nbsp;consectetur adipiscing elit. Quisque<br>&nbsp;quis efficitur massa.</p><button class="btn btn-light fw-bold link-secondary" type="button" style="border-radius: 15px;padding: 12px 30px;max-height: 50px;font-family: Figtree, sans-serif;font-weight: bold;margin-top: 46px;">CONTACTS</button>
+                        <p class="autosyncx" style="text-align: left;font-size: 16px;font-family: Figtree, sans-serif;line-height: 22px;color: rgb(255,255,255);margin: 0px;margin-top: 48px;">Lorem ipsum dolor sit amet,<br>&nbsp;consectetur adipiscing elit. Quisque<br>&nbsp;quis efficitur massa.</p><button class="btn btn-light fw-bold link-secondary disappearState" type="button" style="border-radius: 15px;padding: 12px 30px;max-height: 50px;font-family: Figtree, sans-serif;font-weight: bold;margin-top: 46px;">CONTACTS</button>
                     </div>
                     <div class="col-md-6 col-xl-4 col-xxl-5">
                         <div>
