--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
     </nav>
     <header class="pt-5">
-        <div class="d-flex flex-column justify-content-center align-items-center" style="height: 578px;background: url(&quot;assets/img/home%20page%20background.jpg&quot;) center / cover;margin-bottom: 380px;">
-            <div style="width: 70%;">
+        <div class="d-flex flex-column justify-content-center align-items-center autosyncY" style="height: 678px;background: url(&quot;assets/img/home%20page%20background.jpg&quot;) center / cover;margin-bottom: 380px;">
+            <div class="widthControl" style="width: 70%;margin-bottom: 70px;">
                 <h1 class="text-light extraHome" style="font-size: 75px;font-family: Figtree, sans-serif;"><strong>Build your <span style="color: rgb(250, 193, 14);">future.</span></strong><br><strong>One <span style="color: rgb(250, 193, 14);">token</span> at a time.</strong></h1>
                 <p class="text-light" style="line-height: 17.6px;font-family: Figtree, sans-serif;">Lorem ipsum dolor sit amet, consectetur<br>&nbsp;adipiscing elit. Quisque quis efficitur massa.</p><button class="btn btn-primary" type="button" style="border-radius: 10px;color: #10367d;background: rgb(255,255,255);font-family: Figtree, sans-serif;">EXPLORE</button>
             </div>
