About page done

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="assets/css/cards-d_style.css">
     <link rel="stylesheet" href="assets/css/Features-Cards-icons.css">
+    <link rel="stylesheet" href="assets/css/Team-images.css">
     <link rel="stylesheet" href="assets/css/untitled-1.css">
     <link rel="stylesheet" href="assets/css/untitled-2.css">
     <link rel="stylesheet" href="assets/css/untitled-3.css">
@@ -25,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="index.html" style="font-family: Figtree">Home</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="features.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="about.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="features.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="integrations.html" style="font-family: Figtree, sans-serif;">Contact Us</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="pricing.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
