--- a/contacts.html
+++ b/contacts.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Figtree&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
+    <link rel="stylesheet" href="assets/css/accordion-faq-list.css">
     <link rel="stylesheet" href="assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="assets/css/cards-d_style.css">
     <link rel="stylesheet" href="assets/css/Features-Cards-icons.css">
@@ -27,10 +28,10 @@
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="index.html" style="font-family: Figtree">Home</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="about.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="features.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="faq.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="integrations.html" style="font-family: Figtree, sans-serif;">Contact Us</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="pricing.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="contacts.html" style="font-family: Figtree, sans-serif;">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="faq.html" style="font-family: Figtree, sans-serif;">FAQ</a></li>
                     <li class="nav-item"></li>
                 </ul><a class="fw-bold link-secondary" href="contacts.html" style="font-family: Figtree, sans-serif;">Register</a><a class="btn btn-primary border rounded-pill shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px;font-family:Figtree">Log in</a>
             </div>
