--- a/faq.html
+++ b/faq.html
@@ -27,11 +27,11 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="index.html" style="font-family: Figtree">Home</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="about.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="faq.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="about.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="faq.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="integrations.html" style="font-family: Figtree, sans-serif;">Contact Us</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="pricing.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="faq.html" style="font-family: Figtree, sans-serif;">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="faq.html" style="font-family: Figtree, sans-serif;">FAQ</a></li>
                     <li class="nav-item"></li>
                 </ul><a class="fw-bold link-secondary" href="contacts.html" style="font-family: Figtree, sans-serif;">Register</a><a class="btn btn-primary border rounded-pill shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px;font-family:Figtree">Log in</a>
             </div>
@@ -40,81 +40,50 @@
     <header class="pt-5">
         <div class="d-flex flex-column justify-content-center align-items-center align-content-center align-items-sm-center justify-content-md-center align-items-md-center justify-content-xxl-center autosyncY" style="height: 400px;background: url(&quot;assets/img/home%20page%20background.jpg&quot;) center / cover;margin-bottom: initial;">
             <div class="widthControl" style="width: 70%;margin-top: 50px;">
-                <h1 class="fw-bold text-center text-light extraHome" style="font-size: 75px;font-family: Figtree, sans-serif;">About Us</h1>
+                <h1 class="fw-bold text-center text-light extraHome" style="font-size: 75px;font-family: Figtree, sans-serif;">FAQ</h1>
                 <p class="text-light" style="line-height: 17.6px;font-family: Figtree, sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>&nbsp;Quisque quis efficitur massa.</p>
             </div>
         </div>
-        <div class="container" style="margin-top: 50px;">
-            <div class="row">
-                <div class="col-md-6">
-                    <div style="background: #2b4eef;border-radius: 15px;height: 450px;padding: 80px 40px;">
-                        <h1 class="text-light" style="font-size: 48px;font-family: Figtree, sans-serif;font-weight: bold;">How to start <span style="color: rgb(250, 193, 14);">investing?</span></h1>
-                        <p style="text-align: left;font-size: 16px;font-family: Figtree, sans-serif;line-height: 22px;color: rgb(255,255,255);margin: 0px;">Make it in three simple steps!</p>
-                    </div>
-                </div>
-                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/JA0SZ7kIdUY" width="100%" height="450" style="border-radius: 15px;"></iframe></div>
-            </div>
-        </div>
-        <div class="container-fluid d-flex d-xl-flex align-content-center justify-content-xl-center align-items-xl-start py-4 py-xl-5 showState" style="width: 100%;padding-right: 0;padding-left: 0;">
-            <div class="text-center text-white-50 bg-primary border rounded border-0 d-flex d-xl-flex flex-column justify-content-xl-center align-items-xl-center p-3 showState" style="width: 100%;padding: 0px;">
-                <h1 class="fw-bolder text-light" style="font-size: 48px;border-color: FAC10E;color: #fac10e;font-weight: bold;font-family: Figtree, sans-serif;">Our Stats</h1>
-                <p class="fw-semibold text-light" style="line-height: 17.6px;color: #10367d;margin-bottom: 0px;font-family: Figtree, sans-serif;"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Quisque quis efficitur massa.<br><br></p>
-                <div class="row row-cols-3 row-cols-md-4 d-flex d-xxl-flex justify-content-between">
-                    <div class="col">
-                        <div class="p-3">
-                            <h4 class="display-5 fw-bold text-white mb-0"><strong><span style="color: rgb(250, 193, 14); background-color: rgba(43, 78, 239, 0);">60</span></strong><sub><strong><span style="background-color: rgba(43, 78, 239, 0);">%</span></strong></sub></h4>
-                            <p class="mb-0" style="font-size: 12px;font-family: Figtree, sans-serif;"><strong><span style="color: rgb(255, 255, 255); background-color: rgba(43, 78, 239, 0);">Lorem ipsum dolor sit amet.</span></strong></p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="p-3">
-                            <h4 class="display-5 fw-bold text-white mb-0"><strong><span style="color: rgb(250, 193, 14); background-color: rgba(43, 78, 239, 0);">85</span></strong><sub><strong><span style="background-color: rgba(43, 78, 239, 0);">k</span></strong></sub></h4>
-                            <p class="mb-0" style="font-size: 12px;"><strong><span style="color: rgb(247, 247, 247); background-color: rgba(255, 255, 255, 0);">Lorem ipsum dolor sit amet.</span></strong></p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="p-3">
-                            <h4 class="display-5 fw-bold text-white mb-0"><strong><span style="color: rgb(250, 193, 14); background-color: rgba(43, 78, 239, 0);">90</span></strong><sub><strong><span style="background-color: rgba(43, 78, 239, 0);">+</span></strong></sub></h4>
-                            <p class="text-light mb-0" style="font-family: Figtree, sans-serif;color: rgb(251,251,251);font-size: 12px;"><strong><span style="color: rgb(255, 255, 255); background-color: rgba(255, 255, 255, 0);">Lorem ipsum dolor sit amet.</span></strong></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container py-4 py-xl-5">
-            <div class="row mb-4 mb-lg-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2 style="font-size: 48px;font-weight: bold;color: #10367D;">Meet&nbsp;<span style="color: rgb(250, 193, 14);">our team</span></h2>
-                    <p class="fw-normal text-secondary w-lg-50" style="font-family: Figtree, sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa.</p>
-                </div>
-            </div>
-            <div class="row gy-3 row-cols-2 row-cols-sm-2 row-cols-md-4 d-xxl-flex justify-content-between justify-content-sm-center justify-content-md-center justify-content-lg-between justify-content-xl-between justify-content-xxl-between">
-                <div class="col">
-                    <div class="card border-0 shadow-none">
-                        <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="187" height="187" src="assets/img/team1.png">
-                            <h5 class="fw-bold text-secondary card-title mb-0"><strong>Full name</strong></h5>
-                            <p class="text-secondary card-text mb-2">Lorem ipsum dolor sit amet, consectetur</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card border-0 shadow-none">
-                        <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="187" height="187" src="assets/img/team2.png">
-                            <h5 class="fw-bold text-secondary card-title mb-0"><strong>Full name</strong></h5>
-                            <p class="text-secondary card-text mb-2">Lorem ipsum dolor sit amet, consectetur</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card border-0 shadow-none">
-                        <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="187" height="187" src="assets/img/team3.png">
-                            <h5 class="fw-bold text-secondary card-title mb-0"><strong>Full name</strong></h5>
-                            <p class="text-secondary card-text mb-2">Lorem ipsum dolor sit amet, consectetur</p>
+        <section class="py-5 bg-light" style="background: rgba(245,246,248,0);">
+            <div class="container" style="padding: 0px;">
+                <div class="row">
+                    <div class="col-md-6 col-xxl-12 offset-md-3 align-self-start" style="margin: 0px;">
+                        <div id="faqlist" class="accordion accordion-flush">
+                            <div class="accordion-item" style="box-shadow: 7px 7px 19px rgba(21,21,21,0.2);border-radius: 15px;margin: 30px 0px;">
+                                <h2 class="accordion-header"><button class="btn link-secondary accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-1" style="border-radius: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa?</button></h2>
+                                <div id="content-accordion-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                    <p class="accordion-body"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                </div>
+                            </div>
+                            <div class="accordion-item" style="box-shadow: 7px 7px 19px rgba(21,21,21,0.2);border-radius: 15px;margin: 30px 0px;">
+                                <h2 class="accordion-header"><button class="btn link-secondary accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-2" style="border-radius: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa?</button></h2>
+                                <div id="content-accordion-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                    <p class="accordion-body"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                </div>
+                            </div>
+                            <div class="accordion-item" style="box-shadow: 7px 7px 19px rgba(21,21,21,0.2);border-radius: 15px;margin: 30px 0px;">
+                                <h2 class="accordion-header"><button class="btn link-secondary accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-3" style="border-radius: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa?</button></h2>
+                                <div id="content-accordion-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                    <p class="accordion-body"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                </div>
+                            </div>
+                            <div class="accordion-item" style="box-shadow: 7px 7px 19px rgba(21,21,21,0.2);border-radius: 15px;margin: 30px 0px;">
+                                <h2 class="accordion-header"><button class="btn link-secondary accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-4" style="border-radius: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa?</button></h2>
+                                <div id="content-accordion-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                    <p class="accordion-body"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                </div>
+                            </div>
+                            <div class="accordion-item" style="box-shadow: 7px 7px 19px rgba(21,21,21,0.2);border-radius: 15px;margin: 30px 0px;">
+                                <h2 class="accordion-header"><button class="btn link-secondary accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-5" style="border-radius: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa?</button></h2>
+                                <div id="content-accordion-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                                    <p class="accordion-body"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <footer class="text-white footRemark" style="padding: 100px;z-index: 5px;margin-top: 150px;background: #10367D;width: 100%;">
             <div class="container" style="border-radius: 20px;margin-top: -200px;">
                 <div class="text-white border-light d-flex flex-column justify-content-between align-items-center flex-lg-row p-4 p-lg-5" style="border-radius: 20px;background: rgb(255,255,255);color: rgb(84,0,0);box-shadow: 7px 7px 19px #10367d2e;">
