--- a/blog.html
+++ b/blog.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="index.html" style="font-family: Figtree">Home</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="about.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="about.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="faq.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="integrations.html" style="font-family: Figtree, sans-serif;">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="blog.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="blog.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="faq.html" style="font-family: Figtree, sans-serif;">FAQ</a></li>
                     <li class="nav-item"></li>
                 </ul><a class="fw-bold link-secondary" href="contacts.html" style="font-family: Figtree, sans-serif;">Register</a><a class="btn btn-primary border rounded-pill shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px;font-family:Figtree">Log in</a>
@@ -40,76 +40,75 @@
     <header class="pt-5">
         <div class="d-flex flex-column justify-content-center align-items-center align-content-center align-items-sm-center justify-content-md-center align-items-md-center justify-content-xxl-center autosyncY" style="height: 400px;background: url(&quot;assets/img/home%20page%20background.jpg&quot;) center / cover;margin-bottom: initial;">
             <div class="widthControl" style="width: 70%;margin-top: 50px;">
-                <h1 class="fw-bold text-center text-light extraHome" style="font-size: 75px;font-family: Figtree, sans-serif;">About Us</h1>
+                <h1 class="fw-bold text-center text-light extraHome" style="font-size: 75px;font-family: Figtree, sans-serif;">Blog</h1>
                 <p class="text-light" style="line-height: 17.6px;font-family: Figtree, sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>&nbsp;Quisque quis efficitur massa.</p>
             </div>
         </div>
-        <div class="container" style="margin-top: 50px;">
-            <div class="row">
-                <div class="col-md-6">
-                    <div style="background: #2b4eef;border-radius: 15px;height: 450px;padding: 80px 40px;">
-                        <h1 class="text-light" style="font-size: 48px;font-family: Figtree, sans-serif;font-weight: bold;">How to start <span style="color: rgb(250, 193, 14);">investing?</span></h1>
-                        <p style="text-align: left;font-size: 16px;font-family: Figtree, sans-serif;line-height: 22px;color: rgb(255,255,255);margin: 0px;">Make it in three simple steps!</p>
-                    </div>
-                </div>
-                <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/JA0SZ7kIdUY" width="100%" height="450" style="border-radius: 15px;"></iframe></div>
-            </div>
-        </div>
-        <div class="container-fluid d-flex d-xl-flex align-content-center justify-content-xl-center align-items-xl-start py-4 py-xl-5 showState" style="width: 100%;padding-right: 0;padding-left: 0;">
-            <div class="text-center text-white-50 bg-primary border rounded border-0 d-flex d-xl-flex flex-column justify-content-xl-center align-items-xl-center p-3 showState" style="width: 100%;padding: 0px;">
-                <h1 class="fw-bolder text-light" style="font-size: 48px;border-color: FAC10E;color: #fac10e;font-weight: bold;font-family: Figtree, sans-serif;">Our Stats</h1>
-                <p class="fw-semibold text-light" style="line-height: 17.6px;color: #10367d;margin-bottom: 0px;font-family: Figtree, sans-serif;"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Quisque quis efficitur massa.<br><br></p>
-                <div class="row row-cols-3 row-cols-md-4 d-flex d-xxl-flex justify-content-between">
-                    <div class="col">
-                        <div class="p-3">
-                            <h4 class="display-5 fw-bold text-white mb-0"><strong><span style="color: rgb(250, 193, 14); background-color: rgba(43, 78, 239, 0);">60</span></strong><sub><strong><span style="background-color: rgba(43, 78, 239, 0);">%</span></strong></sub></h4>
-                            <p class="mb-0" style="font-size: 12px;font-family: Figtree, sans-serif;"><strong><span style="color: rgb(255, 255, 255); background-color: rgba(43, 78, 239, 0);">Lorem ipsum dolor sit amet.</span></strong></p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="p-3">
-                            <h4 class="display-5 fw-bold text-white mb-0"><strong><span style="color: rgb(250, 193, 14); background-color: rgba(43, 78, 239, 0);">85</span></strong><sub><strong><span style="background-color: rgba(43, 78, 239, 0);">k</span></strong></sub></h4>
-                            <p class="mb-0" style="font-size: 12px;"><strong><span style="color: rgb(247, 247, 247); background-color: rgba(255, 255, 255, 0);">Lorem ipsum dolor sit amet.</span></strong></p>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="p-3">
-                            <h4 class="display-5 fw-bold text-white mb-0"><strong><span style="color: rgb(250, 193, 14); background-color: rgba(43, 78, 239, 0);">90</span></strong><sub><strong><span style="background-color: rgba(43, 78, 239, 0);">+</span></strong></sub></h4>
-                            <p class="text-light mb-0" style="font-family: Figtree, sans-serif;color: rgb(251,251,251);font-size: 12px;"><strong><span style="color: rgb(255, 255, 255); background-color: rgba(255, 255, 255, 0);">Lorem ipsum dolor sit amet.</span></strong></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="container py-4 py-xl-5">
-            <div class="row mb-4 mb-lg-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2 style="font-size: 48px;font-weight: bold;color: #10367D;">Meet&nbsp;<span style="color: rgb(250, 193, 14);">our team</span></h2>
-                    <p class="fw-normal text-secondary w-lg-50" style="font-family: Figtree, sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa.</p>
-                </div>
-            </div>
-            <div class="row gy-3 row-cols-2 row-cols-sm-2 row-cols-md-4 d-xxl-flex justify-content-between justify-content-sm-center justify-content-md-center justify-content-lg-between justify-content-xl-between justify-content-xxl-between">
+            <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
                 <div class="col">
-                    <div class="card border-0 shadow-none">
-                        <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="187" height="187" src="assets/img/team1.png">
-                            <h5 class="fw-bold text-secondary card-title mb-0"><strong>Full name</strong></h5>
-                            <p class="text-secondary card-text mb-2">Lorem ipsum dolor sit amet, consectetur</p>
+                    <div class="card" style="border-radius: 10px;"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="assets/img/pexels-pixabay-271667%204.png">
+                        <div class="card-body p-4">
+                            <h4 class="fw-bold text-secondary card-title">Title of Article 1</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa.</p>
+                            <p class="text-end card-text" style="font-family: Figtree, sans-serif;font-weight: bold;color: #FAC10E;">Read full article<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right-short" style="margin-left: 10px;">
+                                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"></path>
+                                </svg></p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card border-0 shadow-none">
-                        <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="187" height="187" src="assets/img/team2.png">
-                            <h5 class="fw-bold text-secondary card-title mb-0"><strong>Full name</strong></h5>
-                            <p class="text-secondary card-text mb-2">Lorem ipsum dolor sit amet, consectetur</p>
+                    <div class="card" style="border-radius: 10px;"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="assets/img/pexels-pixabay-48895%201.png">
+                        <div class="card-body p-4">
+                            <h4 class="fw-bold text-secondary card-title">Title of Article 2</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa.</p>
+                            <p class="text-end card-text" style="font-family: Figtree, sans-serif;font-weight: bold;color: #FAC10E;">Read full article<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right-short" style="margin-left: 10px;">
+                                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"></path>
+                                </svg></p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card border-0 shadow-none">
-                        <div class="card-body text-center d-flex flex-column align-items-center p-0"><img class="rounded-circle mb-3 fit-cover" width="187" height="187" src="assets/img/team3.png">
-                            <h5 class="fw-bold text-secondary card-title mb-0"><strong>Full name</strong></h5>
-                            <p class="text-secondary card-text mb-2">Lorem ipsum dolor sit amet, consectetur</p>
+                    <div class="card" style="border-radius: 10px;"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="assets/img/pexels-cristian-rojas-8853521%201.png">
+                        <div class="card-body p-4">
+                            <h4 class="fw-bold text-secondary card-title">Title of Article 3</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa.</p>
+                            <p class="text-end card-text" style="font-family: Figtree, sans-serif;font-weight: bold;color: #FAC10E;">Read full article<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right-short" style="margin-left: 10px;">
+                                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"></path>
+                                </svg></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="border-radius: 10px;"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="assets/img/pexels-pixabay-210607%201.png">
+                        <div class="card-body p-4">
+                            <h4 class="fw-bold text-secondary card-title">Title of Article 4</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa.</p>
+                            <p class="text-end card-text" style="font-family: Figtree, sans-serif;font-weight: bold;color: #FAC10E;">Read full article<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right-short" style="margin-left: 10px;">
+                                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"></path>
+                                </svg></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="border-radius: 10px;"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="assets/img/pexels-goumbik-590022%202.png">
+                        <div class="card-body p-4">
+                            <h4 class="fw-bold text-secondary card-title">Title of Article 5</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa.</p>
+                            <p class="text-end card-text" style="font-family: Figtree, sans-serif;font-weight: bold;color: #FAC10E;">Read full article<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right-short" style="margin-left: 10px;">
+                                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"></path>
+                                </svg></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="border-radius: 10px;"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="assets/img/pexels-expect-best-79873-351264%201.png">
+                        <div class="card-body p-4">
+                            <h4 class="fw-bold text-secondary card-title">Title of Article 6</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa.</p>
+                            <p class="text-end card-text" style="font-family: Figtree, sans-serif;font-weight: bold;color: #FAC10E;">Read full article<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right-short" style="margin-left: 10px;">
+                                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"></path>
+                                </svg></p>
                         </div>
                     </div>
                 </div>
