--- a/faq.html
+++ b/faq.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="about.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="faq.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="integrations.html" style="font-family: Figtree, sans-serif;">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="pricing.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="blog.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary active" href="faq.html" style="font-family: Figtree, sans-serif;">FAQ</a></li>
                     <li class="nav-item"></li>
                 </ul><a class="fw-bold link-secondary" href="contacts.html" style="font-family: Figtree, sans-serif;">Register</a><a class="btn btn-primary border rounded-pill shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px;font-family:Figtree">Log in</a>
@@ -44,10 +44,10 @@
                 <p class="text-light" style="line-height: 17.6px;font-family: Figtree, sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>&nbsp;Quisque quis efficitur massa.</p>
             </div>
         </div>
-        <section class="py-5 bg-light" style="background: rgba(245,246,248,0);">
+        <section class="d-xl-flex d-xxl-flex align-items-center justify-content-sm-center justify-content-md-center justify-content-lg-center justify-content-xl-center justify-content-xxl-center py-5 BGroundLight">
             <div class="container" style="padding: 0px;">
-                <div class="row">
-                    <div class="col-md-6 col-xxl-12 offset-md-3 align-self-start" style="margin: 0px;">
+                <div class="row" style="margin: 10px;">
+                    <div class="col-md-6 col-lg-11 col-xl-11 col-xxl-12 offset-md-3 align-self-start" style="margin: 0px;width: 96%;">
                         <div id="faqlist" class="accordion accordion-flush">
                             <div class="accordion-item" style="box-shadow: 7px 7px 19px rgba(21,21,21,0.2);border-radius: 15px;margin: 30px 0px;">
                                 <h2 class="accordion-header"><button class="btn link-secondary accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#content-accordion-1" style="border-radius: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis efficitur massa?</button></h2>
