--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="about.html" style="font-family: Figtree, sans-serif;"><strong>About</strong></a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="faq.html" style="font-family: Figtree, sans-serif;">Projects</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="integrations.html" style="font-family: Figtree, sans-serif;">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="pricing.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="blog.html" style="font-family: Figtree, sans-serif;">Blog</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold link-secondary" href="faq.html" style="font-family: Figtree, sans-serif;">FAQ</a></li>
                     <li class="nav-item"></li>
                 </ul><a class="fw-bold link-secondary" href="contacts.html" style="font-family: Figtree, sans-serif;">Register</a><a class="btn btn-primary border rounded-pill shadow buttonPressx" role="button" href="signup.html" style="margin:0px 10px;font-family:Figtree">Log in</a>
